# nnbuilder

./: .dev.env  .env.dev  .env.save  .gitignore  .tokeignore  README.md  build.gradle  codecov.yml  docker-compose.template.yaml  envoy.template.yaml  envoy.yaml  gradle.properties  settings.gradle
.circleci/: config.yml
Conspects/: NeuralNetwork.md
artifacts/: package.json
constructor/: build.gradle  constructor.py  database_tests.py  project_sample-2.ipynb  project_sample-3.ipynb  pyproject.toml  setup.cfg  structures.py  tox.ini  train.py
constructor/src/: constructor.py  function_for_db.py  structures.py  train.py
constructor/src/constructor/: constructor.py  main.py  structures.py  train.py
constructor/test/: createnn_test.py  database_test.py  database_tests.py  generate_nndescription.py  test_tools.py
frontend/: .eslintrc.json  build.gradle  jest.config.ts  package-lock.json  package.json  tsconfig.json
frontend/configs/webpack/: common.js  dev.js  prod.js
frontend/src/: clients.ts  index.html.ejs  index.tsx
frontend/src/__mocks__/: clients.ts
frontend/src/components/: App.tsx  Editor.tsx  EditorWindow.tsx  Form.tsx  Header.tsx  IncDecInput.tsx  Layer.tsx  LayerSettings.tsx  LayersSettings.tsx  LeftPanel.tsx  Login.tsx  Projects.tsx  Register.tsx  RightPanel.tsx  VersionController.tsx
frontend/src/example/: silly.ts
frontend/src/structure/: Edge.tsx  LayerData.tsx  NeuronData.tsx  (+2 more)
frontend/webpack/: common.js  dev.js  prod.js
nnbuilder/: build.gradle
nnbuilder-api/: build.gradle  package-lock.json  package.json  tsconfig.json
scripts/: dotenv.sh  virtualenv.sh
(+137 files in other folders)
