[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools ~= 62.4",
    "wheel"
]

[project]
name = "nnbuilder-python"
version = "0.0.0"
dependencies = [
    "numpy",
    "psycopg2",
    "torch",
    "sklearn",
    "dotenv",
    "pandas"
]

[project.scripts]
constructor = "constructor.main:main"
