[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools ~= 62.4",
    "wheel"
]

[project]
name = "nnbuilder-python"
version = "0.0.0"
dependencies = [
    "numpy",
    "sklearn",
    "torch",
    "psycopg2",
    "pandas"
]

[project.scripts]
constructor = "constructor.train:train"
