[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools ~= 62.4",
    "wheel",
    "pytest ~= 6.0",
    "flake8",
]

[project]
name = "nnbuilder-python"
version = "0.0.0"
dependencies = [
    "numpy",
    "sklearn",
    "torch",
    "psycopg2",
    "pandas",
    "python-dotenv",
]

[project.scripts]
constructor = "constructor.train:train"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "test",
]
python_files = "*.py"
