[metadata]
name = nnbuilder-python

[options]
packages = find:
package_dir = = src
include_package_data = true
setup_requires =
    setuptools
    pylint
install_requires =
    numpy

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    constructor = constructor.main:main
